[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/UI/Ground_Arc.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prefab/Arabic_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Prefab/Un_Answered_UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Prefab/Answer_Progress.gd" type="Script" id=4]
[ext_resource path="res://Resources/UI/Circle_Full_untick.png" type="Texture" id=5]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=6]
[ext_resource path="res://Resources/UI/Circle_Full_tick.png" type="Texture" id=7]
[ext_resource path="res://Assets/Prefab/M_P_Test.gd" type="Script" id=8]
[ext_resource path="res://Assets/Prefab/MCQs_Answer_Option.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/UI/Test_btn_Fill.png" type="Texture" id=10]
[ext_resource path="res://Resources/UI/Test_btn_Empty.png" type="Texture" id=11]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=12]
[ext_resource path="res://Assets/Prefab/Test_Quit.gd" type="Script" id=14]
[ext_resource path="res://Assets/Prefab/NoBtn.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Prefab/YesBtn.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Prefab/Test_Over_M.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Prefab/NextBtn.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 100.0 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.2, 0.259887, 0.2, -0.259887, 1, -0.2, -0.256376, 0.2, 0.256376 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.205772, 0.270419, 0.205772, -0.270419, 1, -0.194228, -0.245844, 0.194228, 0.245844 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Processing:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Processing:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.8, 0.8, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "End_Results"
tracks/0/type = "value"
tracks/0/path = NodePath("Test_Over:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Test_Over:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Test_Over:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Test_Over:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[node name="Test Area" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Question_Area" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1600.0
color = Color( 0.0745098, 0.105882, 0.164706, 1 )

[node name="BG_T" type="TextureRect" parent="Question_Area"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0
margin_bottom = 247.0
rect_scale = Vector2( 1, -1 )
rect_pivot_offset = Vector2( 540, 231 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Current_Question_Number" type="TextureProgress" parent="Question_Area/BG_T"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = -135.0
margin_right = 147.0
margin_bottom = 159.0
rect_scale = Vector2( 1, -1 )
rect_pivot_offset = Vector2( 147, 147 )
rounded = true
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 7 )
fill_mode = 4

[node name="Progress_Label" type="Label" parent="Question_Area/BG_T/Current_Question_Number"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
theme = ExtResource( 6 )
text = "45"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Question_Area"]
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 1.3
alignment = 1

[node name="Question" type="Label" parent="Question_Area/VBoxContainer"]
unique_name_in_owner = true
margin_right = 972.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 2 )
text = "Test Question"
align = 1
valign = 1
autowrap = true

[node name="Dis" type="Label" parent="Question_Area/VBoxContainer"]
unique_name_in_owner = true
margin_top = 341.0
margin_right = 972.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 12 )
text = "Detail"
align = 1
valign = 1
autowrap = true

[node name="Answer_Progress" type="HBoxContainer" parent="Question_Area"]
unique_name_in_owner = true
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.2
alignment = 1
script = ExtResource( 4 )
Boxes = ExtResource( 3 )

[node name="Un_Answered" parent="Question_Area/Answer_Progress" instance=ExtResource( 3 )]
margin_left = 110.0
margin_right = 130.0

[node name="Un_Answered2" parent="Question_Area/Answer_Progress" instance=ExtResource( 3 )]
margin_left = 354.0
margin_right = 374.0

[node name="Un_Answered3" parent="Question_Area/Answer_Progress" instance=ExtResource( 3 )]
margin_left = 598.0
margin_right = 618.0

[node name="Un_Answered4" parent="Question_Area/Answer_Progress" instance=ExtResource( 3 )]
margin_left = 842.0
margin_right = 862.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.95
alignment = 1

[node name="Op_A" parent="VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 51.0
margin_right = 990.0
margin_bottom = 201.0

[node name="Op_B" parent="VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 309.0
margin_right = 990.0
margin_bottom = 459.0

[node name="Op_C" parent="VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 566.0
margin_right = 990.0
margin_bottom = 716.0

[node name="Op_D" parent="VBoxContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 824.0
margin_right = 990.0
margin_bottom = 974.0

[node name="timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="NextBtn" type="TextureProgress" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
margin_left = -390.0
margin_top = -90.0
rect_pivot_offset = Vector2( 195, 45 )
theme = ExtResource( 6 )
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 10 )
fill_mode = 3
script = ExtResource( 18 )

[node name="Text" type="Label" parent="NextBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 195, 0 )
text = "Next"
align = 1
valign = 1

[node name="Processing" type="Label" parent="NextBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 195, 90 )
text = "Processing..."
align = 1
valign = 1
percent_visible = 0.8

[node name="TextureButton" type="TextureButton" parent="NextBtn"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextBtn"]
reset_on_save = false
playback_speed = 2.0
anims/click = SubResource( 1 )

[node name="Quit_Scene" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.109804, 0.160784, 0.905882 )

[node name="VBoxContainer" type="VBoxContainer" parent="Quit_Scene"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
custom_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="Quit_Scene/VBoxContainer"]
margin_top = 881.0
margin_right = 1080.0
margin_bottom = 1208.0
text = "Are You Sure?
You will Loss Your Progress"
align = 1
valign = 1
autowrap = true
script = ExtResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="Quit_Scene/VBoxContainer"]
margin_top = 1308.0
margin_right = 1080.0
margin_bottom = 1398.0
theme = ExtResource( 6 )
alignment = 1

[node name="YesBtn" parent="Quit_Scene/VBoxContainer/HBoxContainer" instance=ExtResource( 16 )]

[node name="NoBtn" parent="Quit_Scene/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]

[node name="Test_Over" parent="." instance=ExtResource( 17 )]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_right = 2.0

[node name="Test_Time" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4096.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_speed = 4.0
anims/End_Results = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="Answered" from="VBoxContainer/Op_A" to="." method="_on_Answered"]
[connection signal="Answered" from="VBoxContainer/Op_B" to="." method="_on_Answered"]
[connection signal="Answered" from="VBoxContainer/Op_C" to="." method="_on_Answered"]
[connection signal="Answered" from="VBoxContainer/Op_D" to="." method="_on_Answered"]
[connection signal="button_down" from="NextBtn/TextureButton" to="." method="_on_Next_button_down"]
